@@ -1,13 +1,26 @@
 package core.cmd;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.concurrent.TimeUnit;
 
 public class CommandLine {
 
     public static void executeCommand(String command) throws IOException, InterruptedException {
-        Process p = Runtime.getRuntime().exec(command);
-        p.waitFor();
+        ProcessBuilder builder = new ProcessBuilder("cmd.exe", "/c", command);
+        builder.redirectErrorStream(true); // gộp stderr vào stdout
+        Process process = builder.start();
+
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                System.out.println(line); // in ra console
+            }
+        }
+
+        process.waitFor(30, TimeUnit.SECONDS);
     }
     public static void executeCommand(String command, String cdFolder) throws IOException, InterruptedException {
         Process p = Runtime.getRuntime().exec(command, null , new File(cdFolder));
